<resources>
    <string name="MI_PUSH_APP_ID">2882303761517476930</string>
    <string name="MI_PUSH_APP_KEY">5751747670930</string>
    <string name="app_name">花卷Live</string>
    <string name="recommend_single">推荐</string>
    <string name="recommend_video_hot">%s推荐</string>
    <string name="hot_people">红人</string>
    <string name="guan_zhu">关注</string>
    <string name="guan_zhu_more">关注更多红人</string>
    <string name="pager_error">页面错误</string>
    <string name="recommon">推荐</string>
    <string name="shopping_cart">购物车</string>
    <string name="mine">我的</string>
    <string name="collect">收藏</string>
    <string name="buy_now">立即购买</string>
    <string name="add_to_shopping_cart">加入购物车</string>
    <string name="intent_error">网络异常，请重试</string>
    <string name="not_data">没有数据了</string>
    <string name="money">¥%s</string>
    <string name="refund_txt">(已退货 x%s)</string>
    <string name="num">数量: %s</string>
    <string name="no_intent">没网了！完全没搞头了！\n快看看是不是流量用光光了！</string>
    <string name="check_per">当前应用缺少必要权限：\n( 相机、麦克风、网络、存储 )\n \n请点击“设置”-“权限”-打开所需权限。\n\n 最后点击两次后退按钮，即可返回。</string>
    <string name="my_order">我的订单</string>
    <string name="all_order">全部订单</string>
    <string name="pending_payment">待付款</string>
    <string name="my_integral">我的花红</string>
    <string name="my_vip">VIP专享</string>
    <string name="my_collection_new">我收藏的商品/视频</string>
    <string name="my_fans">我的粉丝</string>
    <string name="my_concern">我的关注</string>
    <string name="coupon">我的优惠券</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="huajuan_public_wechat_no">花卷微信服务号</string>
    <string name="all">全部</string>
    <string name="zonghe">综合</string>
    <string name="user_info">观众信息</string>
    <string name="huajuan_info">助手反馈</string>
    <string name="goods_info">商品链接</string>
    <string name="hot_person">红人</string>
    <string name="goods">商品</string>
    <string name="shipping_code">订单跟踪</string>
    <string name="pending_ship">待发货</string>
    <string name="order_cancal">已取消</string>
    <string name="order_already_pay">已付款</string>
    <string name="order_sign">已收货</string>
    <string name="order_send">已发货</string>
    <string name="pending_receipt">待收货</string>
    <string name="click_share">还有一些时间？</string>
    <string name="get_yh">获得更多花卷优惠</string>
    <string name="title_share_to">分享到</string>
    <string name="share_fail">分享失败</string>
    <string name="cancel">取消</string>
    <string name="search">搜索</string>
    <string name="start_also">再试一次</string>
    <string name="copy_success">复制成功</string>
    <string name="upgrade_vip_success">用户%1$s升级为VIP用户!</string>
    <string name="upgrade_vip_over"> \n \n你本月已经使用了全部升级粉丝机会\n </string>
    <string name="upgrade_vip_tishi">\n \n \n确定要把用户%1$s升级为VIP用户吗？\n \n </string>
    <string name="upgrade_vip_tishi2">\n你本月还有%1$s次升级粉丝的机会\n</string>
    <string name="call_customer_service">联系客服</string>
    <string name="start_pay_remind">提示...</string>
    <string name="order_detail">订单详情</string>
    <string name="look_detail">查看详情</string>
    <string name="order_all">商品金额</string>
    <string name="all_money_order">总计</string>
    <string name="dai_shou_huo">待收货</string>
    <string name="select_pay">选择支付方式</string>
    <string name="go_pay">去付款</string>
    <string name="concer_coupons">关注即得优惠券</string>
    <string name="submit_order">提交订单</string>
    <string name="not_adb_install">未安装此应用</string>
    <string name="connection_customer_fail">联系客服失败</string>
    <string name="start_recorded_fail">启动录制失败</string>
    <string name="status_order">状态：%s</string>
    <string name="order_num">订单号：%s</string>
    <string name="order_trace">配送快递：%s</string>
    <string name="voucher">优惠券</string>
    <string name="all_money">合计</string>
    <string name="shi_shou_money">实收款</string>
    <string name="shi_fu_money">实付款</string>
    <string name="wei_xin">微信支付</string>
    <string name="zhi_fu_bao">支付宝支付</string>
    <string name="yin_lian">银联支付</string>
    <string name="Check_the_logistics">查看物流</string>
    <string name="delete_order">删除订单</string>
    <string name="pay_success_title">支付成功</string>
    <string name="order_empty_text">怎么还没有订单？\n难道一件红人们推荐的好东西也不喜欢吗？</string>
    <string name="pay_success">下单成功！\n宝贝即将出发！</string>
    <string name="order_share">您的一些好友尚未体验过花卷？\n现在邀请您的好友加入花卷，\n对方即可领到%s元代金券。\n\n好友完成首次购物后，\n您也可以得到相应额度的代金券。\n\n好事成双，一起来吧！</string>
    <string name="pay_share_dialog">现在邀请您的好友加入花卷，\n对方即可领到%s元代金券。\n\n好友完成首次购物后，\n您也可以得到相应额度的代金券。</string>
    <string name="service_dialog_top">扫码或搜索微信号 %s</string>
    <string name="service_dialog">与“%s”成为好友后加群</string>
    <string name="more_fl">更多群内专属福利等你拿</string>
    <string name="recording">录制我的卷播</string>
    <string name="recorded">重新录制卷播</string>
    <string name="pending_payment_tishi">因商品本身特性，花卷暂不接受无理由退换货要求，继续购买代表您已经知晓并认同此信息。</string>
    <string name="my_order_num"><![CDATA[ 订单号：<b>%1$s</b> ]]></string>
    <string name="now_money"><![CDATA[ <font >¥</font><font><b>%1$s</b></font> ]]></string>
    <string name="hua_hong">(%s花红) &#160; &#160; &#160; &#160; &#160; &#160;</string>
    <string name="shoping_cat_null_text"> 你的购物车是空的呢...</string>
    <string name="make_video_ing"> 正在生成视频\n请稍后...</string>
    <string name="shoping_cat_together_single">去凑单</string>
    <string name="please_start">请您做好准备</string>
    <string name="select_not">未选择</string>
    <string name="follow_ing">正在关注</string>
    <string name="setup__not">未设置</string>
    <string name="hua_hong_pay">花红支付</string>
    <string name="save_text_money">节约 ¥ %s</string>
    <string name="all_cart_count">共 %s 件</string>
    <string name="yuan">%s 元</string>
    <string name="coupon_can_use_order">%s张可用</string>
    <string name="order_run_money">运费</string>
    <string name="receipt_address_and_phone">填写收货地址和联系方式</string>
    <string name="please_real_name">请填写真实姓名</string>
    <string name="phone">手机号码</string>
    <string name="select_city">选择城市</string>
    <string name="detail_address">请输入详细地址</string>
    <string name="name_and_user_code">收货人姓名及身份证号</string>
    <string name="shiping_cart_prompt">根据海关规定，身份证信息用于商品入境申报，请填写真实姓名和身份证号。错误的信息将导致商品无法正常通关。</string>
    <string name="shiping_cart_guarantee">花卷购物向您保证不会以任何形式泄露你的身份信息。</string>
    <string name="user_code">身份证号码 (选填)</string>
    <string name="shipping_cart_confirm">确  定</string>
    <string name="confirm_order">确认订单</string>
    <string name="write_order">填写订单</string>
    <string name="package_goods">凑单商品</string>
    <string name="submit_order_fail">提交订单失败</string>
    <string name="goods_not_have">商品没有足够库存</string>
    <string name="goods_buy_more">购买商品数达到上限</string>
    <string name="huahong_fail">更新花红失败</string>
    <string name="w_o_y">¥ %s</string>
    <string name="w_o_y_del">-¥%s</string>
    <string name="w_o_y_del_new">-%s</string>
    <string name="w_o_y_not">(已免运费)</string>
    <string name="order_k_h">(%s)</string>
    <string name="order_k_h_huahong">(%s花红)</string>
    <string name="back_pop_title">错过~好不甘心啊！再想想？</string>
    <string name="start_pay_title">超出支付时效后订单将被取消，请尽快完成支付。</string>
    <string name="back_pop_confirm">我再想想</string>
    <string name="pay_continue">继续支付</string>
    <string name="back_pop_cancel">去意已决</string>
    <string name="confirm_cancel">确认离开</string>
    <string name="goods_no_inventory">下手慢了...此宝贝库存不足，已自动调整数量。</string>
    <string name="dialog_goods_no_inventory">下手慢了...\n你要购买的宝贝库存不足，\n少买几件吧…</string>
    <string name="goods_num_limit">该商品，花卷限购 %s 份，请调整选购数量。</string>
    <string name="goods_difference_money"><![CDATA[ 还差 &#160; <font color="#ff737e">¥ %s</font> &#160; 免运费 ]]></string>
    <string name="goods_difference_money2"><![CDATA[ 还差 &#160; <font color="#ff737e">¥ %s</font> ]]></string>
    <string name="package_finish">凑单完成，免运费。</string>
    <string name="package_finish2">凑单完成</string>
    <string name="follow_finish">完成</string>
    <string name="zhidaol">知道了</string>
    <string name="must_get_other_box">礼物已经被别人抢光啦，\n快去别的视频抢宝箱吧～</string>
    <string name="exit">退 出</string>
    <string name="not_exit">暂不退出</string>
    <string name="must_one_min">请至少录制1分钟以上的卷播</string>
    <string name="continue_make">继续录制</string>
    <string name="is_exit">确定退出当前页面吗\n你当前录制的视频将不会被保存</string>
    <string name="upload_is_exit">你录制的视频已经保存在本地，\n确定要现在退出吗？</string>
    <string name="not_pay_current">购买的单件商品达到上限</string>
    <string name="black_name_tishi">亲~\n\n我们记录到您在之前的购物中存在\n\n“%1$s”问题，\n\n"为切实保证您的个人健康和实际利益，在得到您的进一步确认前，我们无法向您提供进一步的购物服务。\n\n\n\n个人确认请联系\n%2$s</string>
    <string name="select_counpons">选择优惠券</string>
    <string name="available_counpons">可用优惠券(%1$s)</string>
    <string name="disabled_counpons">不可用优惠券(%1$s)</string>
    <string name="can_user_counpon_count">每次只可使用一张优惠券</string>
    <string name="empty_available_counpons">哎呀~没有可用的优惠券~</string>
    <string name="empty_disabled_counpons">哎呀~空的~别看了~</string>
    <string name="use_huahong_tips">消费花红无法返还，请谨慎设置</string>
    <string name="title_collect_goods">收藏的商品</string>
    <string name="title_collect_videos">收藏的视频</string>
    <string name="title_concern_huajuan_offical_wechat">关注花卷官方微信</string>
    <string name="huanjuan_wechat_service_no">花卷微信服务号</string>
    <string name="pinyin_huanjuan">huajuangouwu</string>
    <string name="long_press_copy">长按可复制</string>
    <string name="tip_scan_concern">扫描二维码可关注花卷官方微信号</string>
    <string name="tip_know_package_info">实时了解新品上市，促销活动，粉丝福利信息。</string>
    <string name="system_settings">系统设置</string>
    <string name="settings_per">设置</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about_huajuan">关于花卷</string>
    <string name="reserve_list">直播场次</string>
    <string name="che_hui">撤回</string>
    <string name="out_send">弹出</string>
    <string name="is_finish">是否结束直播？</string>
    <string name="is_finish_look_video">是否结束观看？</string>
    <string name="login_push">登   录</string>
    <string name="user_pro">用户协议</string>
    <string name="start_live">开始直播</string>
    <string name="new_huajuan">NEW</string>
    <string name="go_new">今日有上新哟～</string>
    <string name="coupon_get">快去开心买买买吧～！</string>
    <string name="goods_get">快去我的订单里确认收货信息吧～！</string>
    <string name="make_juanbo_get_huahong">录卷播赢花红攻略</string>
    <string name="go_to_make">我来录个卷播吧，好东西必须和wuli\n好友一起分享！</string>
    <string name="go_to_make_two">哇！怪不得她变美这么多，原来是\n用了TA。从这儿购买还能享受立减\n现金的优惠呢~现在就下单！</string>
    <string name="go_to_make_three">OMG！又有50个花红入账啦，好友\n再买一单我就能攒够花红，0元下单\n啦！</string>
    <string name="how_get_huahong">如何轻松get卷播花红？</string>
    <string name="follow_hot_person">关注你感兴趣的红人</string>
    <string name="start_change_vm">应用</string>
    <string name="revert_change_vm">使用默认VM</string>
    <string name="input_vm">输入VM：</string>
    <string name="goto_goods_girl">逛逛她的小铺</string>
    <string name="goto_goods_boy">逛逛他的小铺</string>
    <string name="make_video_time">请注意：录制时长最少1分钟，最长3分钟。</string>
    <string name="make_video_max">你可以上传时长不少于1分钟、不超过3分钟的并且为竖屏模式的视频。</string>
    <string name="not_have_video">哎呀，怎么一条视频都没有...</string>
    <string name="check_price">若对价格有疑问，可点击查看详情</string>
    <string name="password">密码</string>
    <string name="login">登  录</string>
    <string name="hint_phone_number">手机号</string>
    <string name="send_code">发送验证码</string>
    <string name="login_agree">登录即视为同意&#160;&#160;</string>
    <string name="huajuan_protocol">花卷商城用户协议</string>
    <string name="flash_light_on">ON</string>
    <string name="cd_btn_camera_switcher">cd_btn_camera_switcher</string>
    <string name="cd_btn_torch">cd_btn_torch</string>
    <string name="cd_btn_capture">cd_btn_capture</string>
    <string name="cd_btn_orientation">cd_btn_orientation</string>
    <string name="cd_btn_mute">cd_btn_mute</string>
    <string name="cd_btn_fb">cd_btn_fb</string>
    <string name="cd_preview_mirror">cd_preview_mirror</string>
    <string name="cd_encoding_mirror">cd_encoding_mirror</string>
    <string name="ive_look_video">观看</string>
    <string name="ive_start_push">直播</string>
</resources>