<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="9dp">

    <TextView
        android:id="@+id/start_live_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff737e"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="11:00-12:00"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/item_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_live_time"
        android:layout_marginTop="9dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <RelativeLayout
            android:layout_width="135dp"
            android:layout_height="101dp">

            <ImageView
                android:id="@+id/live_image"
                android:layout_width="135dp"
                android:layout_height="101dp"
                android:src="@drawable/ic_loading" />

            <ImageView
                android:id="@+id/live_bg_image"
                android:layout_width="135dp"
                android:layout_height="101dp"
                android:src="@color/alpha_04_black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp">

            <TextView
                android:id="@+id/live_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/app_name"
                android:textColor="#262626"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/item_live_user_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/live_name"
                android:layout_marginTop="18dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/item_live_user_one_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.github.siyamed.shapeimageview.CircularImageView
                        android:id="@+id/item_live_user_one_avatar_civ"
                        android:layout_width="@dimen/heigh_common_21"
                        android:layout_height="@dimen/heigh_common_21"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_user_icon_default"
                        app:siBorderColor="@color/red_FFD9DF"
                        app:siBorderWidth="@dimen/margin_small_2" />

                    <com.github.siyamed.shapeimageview.CircularImageView
                        android:id="@+id/item_live_user_two_avatar_civ"
                        android:layout_width="@dimen/heigh_common_21"
                        android:layout_height="@dimen/heigh_common_21"
                        android:layout_marginLeft="10dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_user_icon_default"
                        android:visibility="gone"
                        app:siBorderColor="@color/red_FFD9DF"
                        app:siBorderWidth="@dimen/margin_small_2" />

                    <com.github.siyamed.shapeimageview.CircularImageView
                        android:id="@+id/item_live_user_three_avatar_civ"
                        android:layout_width="@dimen/heigh_common_21"
                        android:layout_height="@dimen/heigh_common_21"
                        android:layout_marginLeft="10dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_user_icon_default"
                        android:visibility="gone"
                        app:siBorderColor="@color/red_FFD9DF"
                        app:siBorderWidth="@dimen/margin_small_2" />

                    <com.github.siyamed.shapeimageview.CircularImageView
                        android:id="@+id/item_live_user_four_avatar_civ"
                        android:layout_width="@dimen/heigh_common_21"
                        android:layout_height="@dimen/heigh_common_21"
                        android:layout_marginLeft="10dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_user_icon_default"
                        android:visibility="gone"
                        app:siBorderColor="@color/red_FFD9DF"
                        app:siBorderWidth="@dimen/margin_small_2" />

                    <TextView
                        android:id="@+id/item_live_user_one_name_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_small_7"
                        android:singleLine="true"
                        android:text="@string/app_name"
                        android:textColor="@color/gray_7C7C7C"
                        android:textSize="@dimen/textsize_common_12" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/start_push_ing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_back"
        android:gravity="center"
        android:paddingBottom="4dp"
        android:paddingTop="20dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/look_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_icon"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingLeft="43dp"
            android:paddingRight="43dp"
            android:paddingTop="6dp"
            android:text="@string/ive_look_video"
            android:textColor="@color/red_FF737E"
            android:textSize="@dimen/textsize_common_12" />

        <TextView
            android:id="@+id/start_push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_toRightOf="@+id/look_video"
            android:background="@drawable/login_icon"
            android:gravity="center"
            android:paddingBottom="6dp"
            android:paddingLeft="43dp"
            android:paddingRight="43dp"
            android:paddingTop="6dp"
            android:text="@string/ive_start_push"
            android:textColor="@color/red_FF737E"
            android:textSize="@dimen/textsize_common_12" />
    </RelativeLayout>

</RelativeLayout>